--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://clofypruduct-bucuhffuhcfgc7eu.canadacentral-01.azurewebsites.net/api
+REACT_APP_API_URL=https://blue-flower-0e3054f00.6.azurestaticapps.net/api
 
 # Frontend .env
 
