--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://blue-flower-0e3054f00.6.azurestaticapps.net/
+REACT_APP_API_URL=https://productv1-backend-cvgxbqghephbhcb5.canadacentral-01.azurewebsites.net/
 
 # Frontend .env
 
