--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://productv1-backend-cvgxbqghephbhcb5.canadacentral-01.azurewebsites.net/api
+REACT_APP_API_URL=http://localhost:5000/api
 
 # Frontend .env
 
