--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_API_URL=https://clofy-backend-eedvhwc7d9ggedfj.canadacentral-01.azurewebsites.net/api
 
 # Frontend .env
 
